basic/nginx-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactjs-dpl
spec:
  replicas: 4
  selector:
    matchLabels:
      app: reactjs-app
  template:
    metadata:
      labels:
        app: reactjs-app
    spec:
      containers:
      - name: reactjs-app
        #image: reactjs:alpine
        image: 69966/earthdx:78 
        # HPA -> you will need to define the resources
        ports:
        - containerPort: 80
