basic/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactjs-ingress
  annotations: 
    #cert-manager.io/cluster-issuer: "letsencrypt-stag"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingressClassName: "nginx"
spec:
  ingressClassName: "nginx"
  tls: 
    - hosts: 
       - reactjs-demo-k8s.vuthytourn.shop
      secretName: reactjs-k8s-tls 
  rules:
  - host: reactjs-demo-k8s.vuthytourn.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: reactjs-svc 
            port: 
              number: 80
